test/spec_vectors/select/fail/module_27.wat
(module (func $type-3rd-operand-empty-in-then (i32.const 0) (if (then (i32.const 0) (i32.const 0) (select) (drop)))))